# ProjektAlpha

./: .gitignore  CLAUDE.md  README.md  RELEASE.md  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-21-phase-0-1-foundation.md  2026-04-21-phase-2-list-detail.md  2026-04-22-phase-3-map.md  2026-04-22-phase-4a-neue-suche-nominatim.md  2026-04-22-phase-4b-settings-profiles-backup.md  2026-04-23-phase-5-dashboard.md  2026-04-23-phase-6a-polish-tech-debt.md  2026-04-23-phase-6b-release.md
scripts/: bump-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/next-app/: pnpm-lock.yaml
src-tauri/src/: backup.rs  commands.rs  crash.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/db/: activity.rs  categories.rs  companies.rs  dashboard.rs  geocode_cache.rs  migrations.rs  mod.rs  search_profiles.rs
src-tauri/src/db/migrations/: 0001_initial.sql  0002_seed_categories.sql
src-tauri/src/nominatim/: client.rs  mod.rs
src-tauri/src/overpass/: client.rs  mod.rs  parser.rs  query_builder.rs  scoring.rs  search.rs  tile_splitter.rs
src-tauri/tests/fixtures/: overpass_simple.json  overpass_with_polygons.json
src/components/: ErrorBoundary.tsx
src/hooks/: useDashboardData.ts  useFilteredCompanies.ts
src/lib/: format.test.ts  format.ts  logger.ts  map.test.ts  map.ts  tauri.ts
src/pages/: CompaniesPage.tsx  DashboardPage.tsx  MapPage.tsx  NewSearchPage.tsx  SettingsPage.tsx
src/stores/: filterStore.ts  uiStore.ts
src/tests/: setup.ts
(+38 files in other folders)
